8.3 testing exceptions